--- a/lms/src/main/resources/templates/association/evaluation/addEvalByAssociation.html
+++ b/lms/src/main/resources/templates/association/evaluation/addEvalByAssociation.html
@@ -92,6 +92,26 @@
         <table class="table">
             <tbody>
                 <tr>
+                    <td>평가 월</td>
+                    <td>
+                        <select class="form-control" name="evalByAssociationMonth">
+                            <option value="">평가 월 선택</option>
+                            <option value="01">01</option>
+                            <option value="02">02</option>
+                            <option value="03">03</option>
+                            <option value="04">04</option>
+                            <option value="05">05</option>
+                            <option value="06">06</option>
+                            <option value="07">07</option>
+                            <option value="08">08</option>
+                            <option value="09">09</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
                     <td>평가 시작일</td>
                     <td>
                         <input type="date" class="form-control" id="evalByAssociationStartDate" name="evalByAssociationStartDate">
