--- a/lms/src/main/resources/templates/association/evaluation/evaluationTotal.html
+++ b/lms/src/main/resources/templates/association/evaluation/evaluationTotal.html
@@ -5,6 +5,11 @@
 <meta charset="utf-8">
 <!-- html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
+    <style>
+        ul {
+            text-align: center;
+        }
+    </style>
 </th:block>
 
 <!-- html 고유 스크립트 추가 -->
@@ -67,7 +72,6 @@
                         console.log(evalTotalData)
                         chartData.addRows(evalTotalData);
 
-
                         let options = {
                             chart: {
                             title: '년도별 평가 합계 차트',
@@ -108,7 +112,7 @@
                     <td>평가 년도</td>
                     <td>
                         <select class="form-control" id="evalTotalYear" name="evalTotalYear">
-                            <option value="0">전체</option>
+                            <option value="%">전체</option>
                             <option th:each="evalTotalYear:${evalTotalYear}" th:text="${evalTotalYear}" th:value="${evalTotalYear}"></option>
                         </select>
                     </td>
@@ -210,5 +214,20 @@
             </tr>
 		</tbody>
     </table>
+    <div>
+        <ul class="pagination">
+            <li th:if="${currentEvalPage > 10}" class="page-item">
+                <a class="page-link" th:href="@{'/association/evaluation/evaluationTotal?currentEvalPage='+${currentTenEvalPage*10}}">&laquo;</a>
+            </li>    
+            <th:block th:each="num:${#numbers.sequence(1,repetitionPage)}">
+                <li class="page-item">
+                    <a class="page-link" th:href="@{'/association/evaluation/evaluationTotal?currentEvalPage='+${(currentTenEvalPage*10)+num}}" th:text="${(currentTenEvalPage*10)+num}"></a>
+                </li>
+            </th:block>
+            <li th:if="${lastTenEvalPage > currentTenEvalPage}" class="page-item">
+                <a class="page-link" th:href="@{'/association/evaluation/evaluationTotal?currentEvalPage='+${(currentTenEvalPage+1)*10+1}}">&raquo;</a>
+            </li>
+        </ul>
+      </div>
 </div>
 </html>
