--- a/lms/src/main/resources/templates/association/evaluation/modifyEvalTotal.html
+++ b/lms/src/main/resources/templates/association/evaluation/modifyEvalTotal.html
@@ -38,19 +38,19 @@
                 }
             })
         });
-
+        
         //월별 평가 항목 상세 보기 이벤트 처리
         $('#btnModifyEvalByAssociation').on('click',function() {
             console.log($(this).val());
             $('#modifyEvalByAssociation').submit();
         });
-
     })
 </script>
 </th:block>
 
 <div layout:fragment="content">
     <h1>교육원 평가 수정</h1>
+    <a href="/association/evaluation/evaluationTotal" class="btn btn-rightLarge btn-secondary">교육원 평가 리스트</a>
     <div class="row">
         <div class="col-sm-4">
             <h3>교육원 평가 월별 합계</h3>
