[김기남] 자격 시험 공고 등록 수정중

--- a/lms/src/main/resources/templates/association/notice/noticeAnnualLicenseTestList.html
+++ b/lms/src/main/resources/templates/association/notice/noticeAnnualLicenseTestList.html
@@ -33,7 +33,8 @@
 			<td th:text="${subject.noticeAnnualLicenseTestStartDate}"></td>
 			<td th:text="${subject.noticeAnnualLicenseTestEndDate}"></td>
 			<td th:text="${subject.noticeAnnualLicenseTestResultDate}"></td>
-			<td th:text="${subject.noticeAnnualLicenseTestInsertDate}"></td>				
+			<td th:text="${subject.noticeAnnualLicenseTestInsertDate}"></td>
+			<td><a th:href="@{'/association/notice/addNoticeLicenseTestLocation?noticeAnnualLicenseTestCode='+${subject.noticeAnnualLicenseTestCode}}">등록</a></td>				
 		</tr>
 	</table>
 </div>
