--- a/lms/src/main/resources/templates/association/member/insertAssociationAdmin.html
+++ b/lms/src/main/resources/templates/association/member/insertAssociationAdmin.html
@@ -1,11 +1,217 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html xmlns:th="http://www.thymeleaf.org" 
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/root">
 <meta charset="UTF-8">
 <title>협회직원 등록</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sandstone/bootstrap.min.css">
+<!-- html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+</th:block>
+<!-- html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+<!--	daum 주소 api	-->
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script>
+$(document).ready(function(){
+	$('#institutionCode').change(function(){
+		console.log("교육원 코드 :"+$('#institutionCode').val());
+	});
+	//	id중복체크
+	//	유효성 검사를 위한 정규식
+    	let idCheck = /[A-Za-z\d]{5,10}$/; //	최소5자, 최대 10자의 문자
+    	let pwCheck = /(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,16}$/; //	최소 8 자, 최소 하나의 문자 및 하나의 숫자
+    	let numberCheck = /^[0-9]+$/;	//	숫자만 입력해야하는 경우
+    	let nameCheck = /[a-zA-Z가-힣]/; 	//	한글, 영어만
+    	
+    	$("#memberOnlineId").blur(function() {	//id input창을 벗어났을때,아래 이벤트를 실행한다.
+//    		중복체크 버튼이 있을때, 버튼을 클릭했을 때 -> .click(function()) 으로 쓸 수 있다.
+    		let memberOnlineId = $("#memberOnlineId").val(); //id 를 param.
+    		if(!idCheck.test($('#memberOnlineId').val())){
+    			$('#idSub').attr('style','color:#B70000');
+    			$('#idSub').text('5~20자의 영문 소문자, 숫자와 특수기호(_),(-)만 사용 가능합니다.');
+    		} else {
+	    		$.ajax({
+    	            type : 'POST'
+        	        ,data : {'memberOnlineId':memberOnlineId}
+            	    ,url : '/idCheck'
+                	,success : function(data) {
+	                	console.log(data)
+    	                if (data) {
+        	            	$('#idSub').attr('style','color:#2F9D27');
+            	            $('#idSub').text('√ 멋진 아이디네요!');
+                	    } else {
+                    		$('#idSub').attr('style','color:#B70000');
+                    		$('#idSub').text('이미 사용중이거나 탈퇴한 아이디입니다');
+                    		return false;
+	                    }
+    	            },
+        	    });
+    		}
+    	});
+    	$("#memberOnlinePw").blur(function() {
+    		if ($('#memberOnlinePw').val() != ''){
+    			if(!pwCheck.test($('#memberOnlinePw').val())){
+    				$('#pwSub').attr('style','color:#B70000');
+            		$('#pwSub').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
+            		return false;
+    			} else {
+    				$('#pwSub').remove();
+    			}
+    		}
+    	});
+    	$("#memberName").blur(function() {
+    		if ($('#memberName').val() != ''){
+    			if(!nameCheck.test($('#memberName').val())){
+    				$('#nameSub').attr('style','color:#B70000');
+            		$('#nameSub').text('한글, 영어만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#nameSub').remove();
+    			}
+    		}
+    	});
+    	$("#memberRegistrationNumberFront").blur(function() {
+    		if ($('#memberRegistrationNumberFront').val() != ''){
+    			if(!numberCheck.test($('#memberRegistrationNumberFront').val())){
+    				$('#registNoFrontSub').attr('style','color:#B70000');
+            		$('#registNoFrontSub').text('숫자만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#registNoFrontSub').remove();
+    			}
+    		}
+    	});
+    	$("#memberRegistrationNumberBack").blur(function() {
+    		if ($('#memberRegistrationNumberBack').val() != ''){
+    			if(!numberCheck.test($('#memberRegistrationNumberBack').val())){
+    				$('#registNoBackSub').attr('style','color:#B70000');
+            		$('#registNoBackSub').text('숫자만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#registNoBackSub').remove();
+    			}
+    		}
+    	});
+    	$("#institutionApprovalCode").blur(function() {
+    		let institutionApprovalCode = $("#institutionApprovalCode").val(); //teacherApprovalCode 를 param.
+
+        	$.ajax({
+                type : 'POST'
+                ,data : {'institutionApprovalCode':institutionApprovalCode}
+                ,url : '/instApprovalCheck'
+                ,success : function(data) {
+                	console.log(data)
+                    if (data) {
+                    	$('#approvalSub').attr('style','color:#2F9D27');
+                        $('#approvalSub').text('√ 사용 가능한 코드입니다');
+                    } else {
+                    	$('#approvalSub').attr('style','color:#B70000');
+                    	$('#approvalSub').text('발급받은 직원코드를 정확히 입력해주세요');
+                    	return false;
+                    }
+                },
+            });
+    	});
+    	//memberTeacherCareer
+    	/* $("#memberTeacherCareer").blur(function() {
+    		if ($('#memberTeacherCareer').val() != ''){
+    			$('#careerSub').remove();
+    		}
+    	}); */
+    	$("#memberPhoneNumber").blur(function() {
+    		if ($('#memberPhoneNumber').val() != ''){
+    			if(!numberCheck.test($('#memberPhoneNumber').val())){
+    				$('#phoneSub').attr('style','color:#B70000');
+            		$('#phoneSub').text('숫자만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#phoneSub').remove();
+    			}
+    		}
+    	});
+    	$("#memberAddress").blur(function() {
+    		if ($('#memberAddress').val() != ''){
+    			$('#addrSub').remove();
+    		}
+    	});
+    	$("#memberAddressDesc").blur(function() {
+    		if ($('#memberAddressDesc').val() != ''){
+    			$('#addrDescSub').remove();
+    		}
+    	});
+    	$("#institutionCode").blur(function() {
+    		if ($('#institutionCode').val() != ''){
+    			$('#instCodeSub').remove();
+    		}
+    	});
+    	//	폼유효성 검사
+    	$('#btnAdd').on('click',function(){
+    		console.log('#btnInsert click test');
+    		if ($('#memberOnlineId').val() == ''){
+    			$('#idCk').attr('style','color:#B70000')
+    			$('#idCk').text('*아이디를 입력하세요');
+    	    	$('#memberOnlineId').focus();
+        	return false;
+        	} else if ($('#memberOnlinePw').val() == ''){
+    			$('#pwCk').attr('style','color:#B70000')
+    			$('#pwCk').text('*비밀번호를 입력하세요');
+    	    	$('#memberOnlinePw').focus();
+        	return false;
+        	} else if ($('#memberName').val() == ''){
+    			$('#nameCk').attr('style','color:#B70000')
+    			$('#nameCk').text('*이름을 입력하세요');
+    	    	$('#memberName').focus();
+        	return false;
+        	} else if ($('#memberRegistrationNumberFront').val() == ''){
+    			$('#registNoFrontCheck').attr('style','color:#B70000')
+    			$('#registNoFrontCheck').text('*주민번호를 입력하세요');
+    	    	$('#memberRegistrationNumberFront').focus();
+        	return false;
+        	} else if ($('#memberRegistrationNumberBack').val() == ''){
+    			$('#registNoBackCheck').attr('style','color:#B70000')
+    			$('#registNoBackCheck').text('*주민번호를 입력하세요');
+    	    	$('#memberRegistrationNumberBack').focus();
+        	return false;
+        	} else if ($('#teacherApprovalCode').val() == ''){
+        		$('#approvalCheck').attr('style','color:#B70000')
+    			$('#approvalCheck').text('*강사코드를 입력하세요');
+    	    	$('#teacherApprovalCode').focus();
+    	    return false;
+        	} /* else if ($('#memberTeacherCareer').val() == ''){
+        		$('#careerCheck').attr('style','color:#B70000')
+    			$('#careerCheck').text('*경력사항을 입력하세요');
+    	    	$('#memberTeacherCareer').focus();
+    	    return false;
+        	} */ else if ($('#memberPhoneNumber').val() == ''){
+    			$('#phoneCheck').attr('style','color:#B70000')
+    			$('#phoneCheck').text('*전화번호를 입력하세요');
+    	    	$('#memberPhoneNumber').focus();
+        	return false;
+        	} else if ($('#memberAddress').val() == ''){
+    			$('#addrCheck').attr('style','color:#B70000')
+    			$('#addrCheck').text('*주소를 입력하세요');
+    	    	$('#memberAddress').focus();
+        	return false;
+        	} else if ($('#memberAddressDesc').val() == ''){
+    			$('#addrDescCheck').attr('style','color:#B70000')
+    			$('#addrDescCheck').text('*상세주소를 입력하세요');
+    	    	$('#memberAddressDesc').focus();
+        	return false;
+        	} else if ($('#institutionCode').val() == ''){
+    			$('#instCode').attr('style','color:#B70000')
+    			$('#instCode').text('*교육원을 선택하세요');
+    	    	$('#institutionCode').focus();
+        	return false;
+        	}
+    			$('#insertAdmin').submit();
+        	    alert('정상적으로 입력되었습니다');
+        	});
+    	});
+    	$('#btnBack').on('click',function(){
+    		console.log('#btnBack click test');
+    		location.href='javascript:history.back()';
+    	});
+
     function sample6_execDaumPostcode() {
         new daum.Postcode({
             oncomplete: function(data) {
@@ -53,113 +259,117 @@
             }
         }).open();
     }
-</script>
-</head>
-<body>
-<!-- 간격조정 -->
-<div class="row">
-	<div class="col-sm-2"></div>
-	<div class="col-sm-8">
+
+    </script>
+    </th:block>
+<div layout:fragment="content">
+<!-- 	간격조정	 -->
 		<div class="jumbotron">
 			<h1 class="display-3">직원 등록</h1><!-- 	제목	 -->
-			<!-- <p class="lead">강사로 채용 확정되신 분들만 가입을 할 수 있습니다. </p> -->
+			<!-- <p class="lead">교육원 직원만 가입을 할 수 있습니다. 교육원 직원이 아닐 시, 예고 없이 로그인이 제한될 수 있습니다.</p> -->
 			<hr class="my-4">
 			<p>평생교육지원협회 직원만 가입을 할 수 있습니다. 평생교육지원협회 직원이 아닐 시, 예고 없이 로그인이 제한될 수 있습니다.</p>
 			<p class="lead">
-			<form action="/insertTeacher" method="post">
-				<fieldset>
-    				<div class="form-group">
-    				<legend>회원정보</legend>
-    				</div>
+			<div class="row">
+				<div class="col-md-1"></div>
+				<div class="col-md-6">
+					<form action="/insertAdmin" id="insertAdmin" method="post">
+						<fieldset>
+    						<div class="form-group">
+    							<legend>회원정보</legend>
+    						</div>
     				<!-- 	아이디	 -->
-    				<div class="form-group">
-    					<div class="col-sm-5">
-							<label for="InputId">아이디</label>
-							<input type="text" class="form-control" id="memberOnlineId" name="memberOnlineId" aria-describedby="" placeholder="ID" value="">
-    		  				<small class="form-text text-muted">영문/숫자 아이디 중복검사 확인 필수</small>
-      					</div>
-					</div>
+		    				<div class="form-group">
+								<label for="InputId">아이디</label>
+								<input type="text" class="form-control" id="memberOnlineId" name="memberOnlineId" aria-describedby="" placeholder="ID" value="">
+    		  					<small class="form-text" id="idSub"></small>
+							</div>
 					<!-- 	비밀번호	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputPw">비밀번호</label>
-							<input type="password" class="form-control" id="memberOnlinePw" name="memberOnlinePw" aria-describedby="" placeholder="PASSWORD" value="">
-		      				<small class="form-text text-muted">영문/숫자 조합으로 8-16자 </small>
-						</div>
-					</div>
+							<div class="form-group">
+								<label for="InputPw">비밀번호</label>
+								<input type="password" class="form-control" id="memberOnlinePw" name="memberOnlinePw" aria-describedby="" placeholder="PASSWORD" value="">
+		      					<small class="form-text" id="pwSub"></small>
+							</div>
 					<!-- 	이름	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputName">이름</label>
-							<input type="text" class="form-control" id="memberName" name="memberName" aria-describedby="" placeholder="NAME" value="">
-						</div>
-					</div>
+							<div class="form-group">
+								<label for="InputName">이름</label>
+								<input type="text" class="form-control" id="memberName" name="memberName" aria-describedby="" placeholder="NAME" value="">
+								<small class="form-text" id="nameSub"></small>
+							</div>
 					<!-- 	주민번호	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputRegistrationNumber">주민번호</label>
-							<div class="row">
-								<div class="col-sm-6">
-									<input type="text" class="form-control" id="memberRegistrationNumberFront" name="memberRegistrationNumberFront" aria-describedby="" placeholder="RegistrationNumberFront" value="" size="4"> 
+							<div class="form-group">
+								<label for="InputRegistrationNumber">주민번호</label>
+								<div class="row">
+									<div class="col-sm-6">
+										<input type="text" class="form-control" id="memberRegistrationNumberFront" name="memberRegistrationNumberFront" aria-describedby="" placeholder="RegistrationNumberFront" value="" size="4"> 
+									</div>
+									<div class="col-sm-6">
+										<input type="password" class="form-control" id="memberRegistrationNumberBack" name="memberRegistrationNumberBack" aria-describedby="" placeholder="RegistrationNumberBack" value="1001000" size="5">
+									</div>
 								</div>
-								<div class="col-sm-6">
-									<input type="password" class="form-control" id="memberRegistrationNumberBack" name="memberRegistrationNumberBack" aria-describedby="" placeholder="RegistrationNumberBack" value="1001000" size="5">
-								</div>
+								<small class="form-text" id="registNoFrontSub"></small><small class="form-text" id="registNoBackSub"></small>
 							</div>
-						</div>
-					</div>
 					<!-- 	직원코드	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputTeacherApproval">직원코드</label>
-							<input type="text" class="form-control" id="teacherApprovalCode" name="teacherApprovalCode" aria-describedby="" placeholder="TeacherApproval" value="">
-							<small class="form-text text-muted">발급받은 직원코드를 입력하세요</small>
-						</div>
-					</div>
-					
+							<div class="form-group">
+								<label for="InputInstitutionApprovalCode">직원코드</label>
+								<input type="text" class="form-control" id="institutionApprovalCode" name="institutionApprovalCode" aria-describedby="" placeholder="InstitutionApproval" value="">
+								<small class="form-text text-muted">발급받은 직원코드를 입력하세요</small>
+								<small class="form-text" id="approvalSub"></small>
+							</div>
+					<!-- 	경력사항	 -->
+							<!-- <div class="form-group">
+								<label for="exampleTextarea">경력사항</label>
+      							<textarea class="form-control" name="memberTeacherCareer" id="memberTeacherCareer" rows="3"></textarea>
+      							<small class="form-text" id="careerSub"></small>
+		      				</div> -->
 					<!-- 	전화번호	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputPhone">전화번호</label>
-							<input type="tel" class="form-control" name="memberPhoneNumber" aria-describedby="" value="010-1234-1234">
-							<small class="form-text text-muted">ex) 010-0000-0000 </small>
-						</div>
-					</div>
+							<div class="form-group">
+								<label for="InputPhone">전화번호</label>
+								<input type="tel" class="form-control" id="memberPhoneNumber" name="memberPhoneNumber" aria-describedby="" value="010-1234-1234">
+								<small class="form-text" id="phoneSub"></small>
+							</div>
 					<!-- 	주소	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputAddress">주소</label>
-							<div class="row">
-								<div class="col-sm-4">
-									<input type="text" readonly="readonly" class="form-control" maxlength="14" id="memberPostcode" name="memberPostcode" size="4">
+							<div class="form-group">
+								<label for="InputAddress">주소</label>
+								<div class="row">
+									<div class="col-sm-4">
+										<input type="text" readonly="readonly" class="form-control" maxlength="14" id="memberPostcode" name="memberPostcode" size="4">
+									</div>
+									<div class="col-sm-8">
+										<input type="button" class="btn btn-outline-info" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
+									</div>
 								</div>
-								<div class="col-sm-8">
-									<input type="button" class="btn btn-outline-info" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
-								</div>
-							</div>
 								<input id="memberAddress" name="memberAddress" class="form-control" placeholder="도로명주소" readonly="readonly" value="" type="text" size="30"/><br>
-							<div class="row">
-								<div class="col-sm-8">
-									<input id="memberAddressDesc" name="memberAddressDesc" class="form-control" value="2층 한국스마트정보교육원" placeholder="상세주소" type="text"/>
+								<div class="row">
+									<div class="col-sm-8">
+										<input id="memberAddressDesc" name="memberAddressDesc" class="form-control" value="2층 한국스마트정보교육원" placeholder="상세주소" type="text"/>
+									</div>
+									<div class="col-sm-4">
+										<input type="text" id="sample6_extraAddress" size="7" class="form-control" placeholder="참고항목">
+									</div>
 								</div>
-								<div class="col-sm-4">
-									<input type="text" id="sample6_extraAddress" size="7" class="form-control" placeholder="참고항목">
-								</div>
+								<small class="form-text" id="addrSub"></small><small class="form-text" id="addrDescSub"></small>
 							</div>
-						</div>
-					</div>
 					<!--	 회원등급	 -->
-					<input type="hidden" name="memberRank" value="협회직원">
-					<input type="hidden" name="institutionCode" value="I0">
-					<p style="height: 10px"></p>
-					<div class="form-group">
-					<button type="button" class="btn btn-primary">#등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
-					</div>
-				</fieldset>
-			</form>
+					<input type="hidden" id="memberRank" name="memberRank" value="협회직원">
+					<input type="hidden" id="memberInstitutionServiceCheck" name="memberInstitutionServiceCheck" value="최초등록">
+							<div class="form-group">
+								<label for="InputInstitution">교육원</label>
+								<select class="form-control" id="institutionCode" name="institutionCode">
+									<option value="">--교육원선택--</option>
+									<option th:each="institution:${instList}" th:value="${institution.institutionCode}" th:text="${institution.institutionName}"></option>
+								</select>
+								<small class="form-text" id="instCodeSub"></small>
+							</div>
+							<p style="height: 10px"></p>
+							<div class="form-group">
+								<button type="button" id="btnAdd" class="btn btn-primary">직원등록</button> <button type="button" id="btnBack" class="btn btn-secondary disabled">뒤로가기</button>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+				<div class="col-md-5"></div>
+			</div>
 		</div>
 	</div>
-	<div class="col-sm-2"></div>
-</div>
-</body>
 </html>
