--- a/lms/src/main/resources/templates/PI/Board/PIBoardwrite.html
+++ b/lms/src/main/resources/templates/PI/Board/PIBoardwrite.html
@@ -11,12 +11,17 @@
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
 <script>
-/* $(document).ready(function(){
-	$('#btn').on('click',function(){	//$('#btnRemove').click() 가능.
-		console.log('#btnRemove click');
-		
+$(document).ready(function(){
+	$('#btnAdd').on('click',function(){	//$('#btnRemove').click() 가능.
+		console.log('#btnAdd click test');
+		$('#addBoard').submit();
+	    alert('새 글이 등록 되었습니다');
     });
-} */
+	$('#btnBack').on('click',function(){
+		console.log('#btnBack click test');
+		location.href='javascript:history.back()';
+	});
+});
 </script>
 </th:block>
 <div layout:fragment="content">
@@ -29,7 +34,7 @@
 					<hr class="my-4">
 					<p>타인을 비방, 비난하는 글은 경고 없이 삭제될 수 있으며, 이용이 제한 될 수 있습니다.</p> -->
 				<p class="lead">
-				<form action="/insertTeacher" method="post">
+				<form action="/addBoard" id="addBoard" method="post">
 					<fieldset>
 		    			<div class="form-group">
     						<legend>커뮤니티 글쓰기</legend>
@@ -50,7 +55,7 @@
 						</div>
 							<p style="height: 10px"></p>
 						<div class="form-group">
-							<button type="button" class="btn btn-primary">#등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
+							<button type="button" id="btnAdd" class="btn btn-primary">등록</button> <button type="button" class="btn btn-secondary disabled">뒤로가기</button>
 						</div>
 					</fieldset>
 				</form>
